# baccarat-sim

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  package-lock.json  package.json
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-06-07-engine-core.md  2026-06-07-engine-sidebets.md  2026-06-08-game-session.md  2026-06-08-scoreboard-roads.md  2026-06-08-squeeze-cards.md  2026-06-08-wasm-boundary.md  2026-06-08-web-foundation.md  2026-06-09-immersion-teaching.md  2026-06-09-retro-styling.md  2026-06-10-bust-and-audio.md  2026-06-12-cardgl-squeeze-engine.md
engine/: Cargo.toml
engine-wasm/: Cargo.toml
engine-wasm/src/: lib.rs
engine/src/: card.rs  glossary.rs  hand.rs  lib.rs  round.rs  rules.rs  scoreboard.rs  session.rs  settle.rs  shoe.rs  sidebets.rs  table.rs
engine/tests/: integration.rs  statistics.rs
server/: Cargo.toml
server/src/: main.rs  protocol.rs  rooms.rs
smoke/: package-lock.json  package.json  smoke.ts  tsconfig.json
web/: .verify3.mjs  glprobe.html  index.html  package.json  probe.html  tsconfig.json  vite.config.ts  vitest.setup.ts
web/src/: App.test.tsx  App.tsx  bankrollStorage.test.ts  bankrollStorage.ts  cardArt.ts  cards.test.ts  cards.ts  chips.test.ts  chips.ts  format.test.ts  format.ts  glossaryData.test.ts  glossaryData.ts  glprobe.tsx  houseEdge.test.ts  houseEdge.ts  main.tsx  narrate.test.ts  narrate.ts  probe.tsx  squeeze.test.ts  squeeze.ts  squeezeOrder.test.ts  squeezeOrder.ts  tables.test.ts  tables.ts  theme.css
web/src/audio/: settings.test.ts  settings.ts  sfx.ts  (+3 more)
(+98 files in other folders)
