[package]
name = "baccarat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
baccarat-engine = { path = "../engine" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tower-http = { version = "0.5", features = ["fs"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
